# clipinator

./: Cargo.toml  README.md
src/: ffmpeg.rs  main.rs
