[package]
name = "clipinator"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.34.3"
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
env_logger = "0.11.10"
hide_console = "0.2.1"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
rfd = "0.17.2"
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28.0"
which = "8.0.3"
win-msgbox = "0.2.2"
